Added CToolbar::MoveButton
Added CToolbar::PressButton
Added CToolbar::SaveRestore
Added CToolbar::SetDisabledImageList
Added CToolbar::SetDrawTextFlags
Added CToolbar::SetExtendedStyle
Added CToolbar::SetHotImageList
Added CToolbar::SetHotItem
Added CToolbar::SetImageList
Added CToolbar::SetIndent
Added CToolbar::SetMaxTextRows
Added CToolbar::SetPadding
Added CToolbar::SetToolTips
Added CWnd::SetWindowTheme
Added ::IsAeroThemed
Modified CSocket::Bind
Modified CSoeckt::Connect
Modified CSocket::Receive
Modified CSocket::ReceiveFrom
Modified CSocket::Send
Modified CSocket::SentTo
Renamed CToolbar::AddToolbarButton to CToolbar::AddButton
Renamed CWnd::CharToTChar to ::CharToTChar
Renamed CWnd::CharToWide  to ::CharToWide
Renamed CWnd::TCharToChar to ::TCharToChar
Renamed CWnd::TCharToWide to ::TCharToWide
Renamed CWnd::WideToChar  to ::WideToChar
Renamed CWnd::WideToTChar to ::WideToTChar

Added GDIPlus sample
Updated Network samples
Update  FormDemo sample

Incompatibilities with previous versions
----------------------------------------
The stricter testing with asserts might reveal previously hidden errors in code.

Version 6.9
===========

New Features and Enhancements
-----------------------------
* Added a WebBrowser class called CWebBrowser.  This class provides a web 
   browser in a window. This class can be used as a view window anywhere 
   view windows are used, such as in frames, dockers, MDI Children, 
   Tabbed MDIs etc.  It has no dependance on ATL, greatly simplifying the 
   approach to adding a browser window to any application.  It can be compiled
   by any of the supported compilers including Dev-C++, MinGW and the Borland 
   compilers as well as the compilers from Microsoft.  
* Added an ActiveX host class called CAXWindow.
* The CTab, CMDITab, CDocker and CDockContainer classes are now flicker free,
   providing a more professional look during resizing and docker moving.
* Improved the dock targeting and dock hinting.   