@@ -367,9 +367,10 @@ namespace Win32xx
 			// Allocate memory for the BITMAPINFO structure.
 			UINT uQuadSize = (cClrBits == 24)? 0 : sizeof(RGBQUAD) * ((__int64)1 << cClrBits);
 			m_pbmi = (LPBITMAPINFO)new byte[sizeof(BITMAPINFOHEADER) + uQuadSize];
-			if (NULL == m_pbmi) throw std::bad_alloc();
+			if (NULL == m_pbmi) 
+				throw std::bad_alloc();
+			
 			ZeroMemory(m_pbmi, sizeof(BITMAPINFOHEADER) + uQuadSize);
-
 			m_pbmi->bmiHeader.biSize		= sizeof(BITMAPINFOHEADER);
 			m_pbmi->bmiHeader.biHeight		= bmSource.bmHeight;
 			m_pbmi->bmiHeader.biWidth		= bmSource.bmWidth;
@@ -1735,7 +1736,9 @@ namespace Win32xx
 		// Use GetDIBits to create a DIB from our DDB, and extract the colour data
 		MemDC.GetDIBits(hbmSource, 0, pbmi->bmiHeader.biHeight, NULL, pbmi, DIB_RGB_COLORS);
 		byte* lpvBits = new byte[pbmi->bmiHeader.biSizeImage];
-		if (NULL == lpvBits) throw std::bad_alloc();
+		if (NULL == lpvBits) 
+			throw std::bad_alloc();
+		
 		MemDC.GetDIBits(hbmSource, 0, pbmi->bmiHeader.biHeight, lpvBits, pbmi, DIB_RGB_COLORS);
 		UINT nWidthBytes = pbmi->bmiHeader.biSizeImage/pbmi->bmiHeader.biHeight;
 
@@ -1811,7 +1814,9 @@ namespace Win32xx
 		// Use GetDIBits to create a DIB from our DDB, and extract the colour data
 		MemDC.GetDIBits(hbmSource, 0, pbmi->bmiHeader.biHeight, NULL, pbmi, DIB_RGB_COLORS);
 		byte* lpvBits = new byte[pbmi->bmiHeader.biSizeImage];
-		if (NULL == lpvBits) throw std::bad_alloc();
+		if (NULL == lpvBits) 
+			throw std::bad_alloc();
+
 		MemDC.GetDIBits(hbmSource, 0, pbmi->bmiHeader.biHeight, lpvBits, pbmi, DIB_RGB_COLORS);
 		UINT nWidthBytes = pbmi->bmiHeader.biSizeImage/pbmi->bmiHeader.biHeight;
 
