@@ -132,7 +132,7 @@ namespace Win32xx
 		BOOL SetMaxTextRows(int iMaxRows) const;
 		BOOL SetPadding(int cx, int cy) const;
 		void SetToolTips(HWND hwndToolTip) const;
-		
+
 		// Attributes
 		std::vector<UINT>& GetToolbarData() const {return (std::vector <UINT> &)m_vToolbarData;}
 		ToolbarTheme& GetToolbarTheme() {return m_Theme;}
@@ -288,8 +288,8 @@ namespace Win32xx
 	}
 
 	inline BOOL CToolbar::DeleteButton(int iButton) const
-	// Deletes a button from the toolbar. 
-	// iButton is the Zero-based index of the button to delete. 
+	// Deletes a button from the toolbar.
+	// iButton is the Zero-based index of the button to delete.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (int)SendMessage(TB_DELETEBUTTON, (WPARAM)iButton, 0L);
@@ -382,21 +382,21 @@ namespace Win32xx
 		delete[] m_pTChar;
 		m_pTChar = NULL;
 
-		int nLength = SendMessage(TB_GETBUTTONTEXT, idButton, NULL);
+		int nLength = SendMessage(TB_GETBUTTONTEXT, idButton, 0);
 		if (nLength > 0)
 		{
 			m_pTChar = new TCHAR[nLength+1];
-			if (NULL == m_pTChar) 
+			if (NULL == m_pTChar)
 				throw std::bad_alloc();
-			
+
 			memset(m_pTChar, 0, (nLength+1)*sizeof(TCHAR));
 			if (0 != SendMessage(TB_GETBUTTONTEXT, (LPARAM)idButton, (WPARAM)m_pTChar))
 				return m_pTChar;
 		}
-		
+
 		return _T("");
 	}
-	
+
 	inline int CToolbar::GetCommandID(int iIndex) const
 	// Retrieves information about the specified button in a toolbar
 	{
@@ -409,7 +409,7 @@ namespace Win32xx
 	}
 
 	inline HIMAGELIST CToolbar::GetDisabledImageList() const
-	// Retrieves the image list that a toolbar control uses to display inactive buttons. 
+	// Retrieves the image list that a toolbar control uses to display inactive buttons.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (HIMAGELIST)SendMessage(TB_GETDISABLEDIMAGELIST, 0L, 0L);
@@ -468,7 +468,7 @@ namespace Win32xx
 	}
 
 	inline CRect CToolbar::GetRect(int idButton) const
-	// Retrieves the bounding rectangle for a specified toolbar button. 
+	// Retrieves the bounding rectangle for a specified toolbar button.
 	{
 		assert(::IsWindow(m_hWnd));
 		CRect rc;
@@ -477,21 +477,21 @@ namespace Win32xx
 	}
 
 	inline int CToolbar::GetRows() const
-	// Retrieves the number of rows of buttons in a toolbar with the TBSTYLE_WRAPABLE style. 
+	// Retrieves the number of rows of buttons in a toolbar with the TBSTYLE_WRAPABLE style.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (int)SendMessage(TB_GETROWS, 0L, 0L);
 	}
 
 	inline int CToolbar::GetTextRows() const
-	// Retrieves the maximum number of text rows that can be displayed on a toolbar button. 
+	// Retrieves the maximum number of text rows that can be displayed on a toolbar button.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (int)SendMessage(TB_GETTEXTROWS, 0L, 0L);
 	}
 
 	inline HWND CToolbar::GetToolTips() const
-	// Retrieves the handle to the ToolTip control, if any, associated with the toolbar. 
+	// Retrieves the handle to the ToolTip control, if any, associated with the toolbar.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (HWND)SendMessage(TB_GETTOOLTIPS, 0L, 0L);
@@ -557,35 +557,35 @@ namespace Win32xx
 	}
 
 	inline BOOL CToolbar::IsButtonHidden(int idButton) const
-	// Determines whether the specified button in a toolbar is hidden. 
+	// Determines whether the specified button in a toolbar is hidden.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_ISBUTTONHIDDEN, (WPARAM)idButton, 0L);
 	}
 
 	inline BOOL CToolbar::IsButtonHighlighted(int idButton) const
-	// Checks the highlight state of a toolbar button.  
+	// Checks the highlight state of a toolbar button.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_ISBUTTONHIGHLIGHTED, (WPARAM)idButton, 0L);
 	}
 
 	inline BOOL CToolbar::IsButtonIndeterminate(int idButton) const
-	// Determines whether the specified button in a toolbar is indeterminate.  
+	// Determines whether the specified button in a toolbar is indeterminate.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_ISBUTTONINDETERMINATE, (WPARAM)idButton, 0L);
 	}
 
 	inline BOOL CToolbar::IsButtonPressed(int idButton) const
-	// Determines whether the specified button in a toolbar is pressed.  
+	// Determines whether the specified button in a toolbar is pressed.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_ISBUTTONPRESSED, (WPARAM)idButton, 0L);
 	}
 
 	inline int CToolbar::MapAccelerator(TCHAR chAccel) const
-	// Determines whether the specified button in a toolbar is pressed.  
+	// Determines whether the specified button in a toolbar is pressed.
 	{
 		assert(::IsWindow(m_hWnd));
 		int uButtonID;
@@ -599,14 +599,14 @@ namespace Win32xx
 	}
 
 	inline BOOL CToolbar::MarkButton(int idButton) const
-	// Sets the highlight state of a given button in a toolbar control.  
+	// Sets the highlight state of a given button in a toolbar control.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_MARKBUTTON, (WPARAM)idButton, 0L);
 	}
 
 	inline BOOL CToolbar::MoveButton(UINT uOldPos, UINT uNewPos) const
-	// Moves a button from one index to another.  
+	// Moves a button from one index to another.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_MOVEBUTTON, (WPARAM)uOldPos, (LPARAM)uNewPos);
@@ -894,7 +894,7 @@ namespace Win32xx
 	}
 
 	inline BOOL CToolbar::PressButton(int idButton, BOOL fPress) const
-	// Presses or releases the specified button in a toolbar.  
+	// Presses or releases the specified button in a toolbar.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_PRESSBUTTON, (WPARAM)idButton, (LPARAM)MAKELONG(fPress, 0));
@@ -928,7 +928,7 @@ namespace Win32xx
 	}
 
 	inline void CToolbar::SaveRestore(BOOL fSave, TBSAVEPARAMS* ptbsp) const
-	// Presses or releases the specified button in a toolbar.  
+	// Presses or releases the specified button in a toolbar.
 	{
 		assert(::IsWindow(m_hWnd));
 		SendMessage(TB_PRESSBUTTON, (WPARAM)fSave, (LPARAM)ptbsp);
@@ -1175,14 +1175,14 @@ namespace Win32xx
 	}
 
 	inline HIMAGELIST CToolbar::SetDisableImageList(HIMAGELIST himlNewDisabled) const
-	// Sets the image list that the toolbar control will use to display disabled buttons. 
+	// Sets the image list that the toolbar control will use to display disabled buttons.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (HIMAGELIST)SendMessage(TB_SETDISABLEDIMAGELIST, 0L, (LPARAM)himlNewDisabled);
 	}
 
 	inline DWORD CToolbar::SetDrawTextFlags(DWORD dwMask, DWORD dwDTFlags) const
-	// Sets the text drawing flags for the toolbar. 
+	// Sets the text drawing flags for the toolbar.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (DWORD)SendMessage(TB_SETDRAWTEXTFLAGS, (WPARAM)dwMask, (LPARAM)dwDTFlags);
@@ -1190,14 +1190,14 @@ namespace Win32xx
 
 	inline DWORD CToolbar::SetExtendedStyle(DWORD dwExStyle) const
 	// Sets the text drawing flags for the toolbar.
-	// Extended styles include: TBSTYLE_EX_DRAWDDARROWS, TBSTYLE_EX_HIDECLIPPEDBUTTONS, TBSTYLE_EX_DOUBLEBUFFER and TBSTYLE_EX_MIXEDBUTTONS 
+	// Extended styles include: TBSTYLE_EX_DRAWDDARROWS, TBSTYLE_EX_HIDECLIPPEDBUTTONS, TBSTYLE_EX_DOUBLEBUFFER and TBSTYLE_EX_MIXEDBUTTONS
 	{
 		assert(::IsWindow(m_hWnd));
 		return (DWORD)SendMessage(TB_SETEXTENDEDSTYLE, 0L, (LPARAM)dwExStyle);
 	}
 
 	inline HIMAGELIST CToolbar::SetHotImageList(HIMAGELIST himlNewHot) const
-	// Sets the image list that the toolbar control will use to display hot buttons. 
+	// Sets the image list that the toolbar control will use to display hot buttons.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (HIMAGELIST)SendMessage(TB_SETHOTIMAGELIST, 0L, (LPARAM)himlNewHot);
@@ -1313,14 +1313,14 @@ namespace Win32xx
 	}
 
 	inline BOOL CToolbar::SetMaxTextRows(int iMaxRows) const
-	// Sets the maximum number of text rows displayed on a toolbar button. 
+	// Sets the maximum number of text rows displayed on a toolbar button.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_SETMAXTEXTROWS, (WPARAM)iMaxRows, 0L);
 	}
 
 	inline BOOL CToolbar::SetPadding(int cx, int cy) const
-	// Sets the padding for a toolbar control. 
+	// Sets the padding for a toolbar control.
 	{
 		assert(::IsWindow(m_hWnd));
 		return (BOOL)SendMessage(TB_SETPADDING, 0L, (WPARAM)MAKELONG(cx, cy));
@@ -1340,7 +1340,7 @@ namespace Win32xx
 	}
 
 	inline void CToolbar::SetToolTips(HWND hwndToolTip) const
-	// Associates a ToolTip control with a toolbar. 
+	// Associates a ToolTip control with a toolbar.
 	{
 		assert(::IsWindow(m_hWnd));
 		SendMessage(TB_SETPADDING, (WPARAM)hwndToolTip, 0L);
